# app/Http/Requests/Api/ReveiwSaveRequest.php
@@ -8,7 +8,37 @@ use OpenApi\Annotations as OA;
 
 class ReveiwSaveRequest extends BaseApiRequest
 {
-    /**
+ /**
+ * 
+ * 
+ * @OA\Schema(
+ *     schema="ReveiwSaveRequest",
+ *     type="object",
+ *     @OA\Property(
+ *         property="that_id",
+ *         type="integer",
+ *         description="Ыender ID",
+ *         example="3"
+ *     ),
+ *     @OA\Property(
+ *         property="to_whom_id",
+ *         type="integer",
+ *         description="Recipient ID",
+ *         example="3"
+ *     ),
+ *     @OA\Property(
+ *         property="rating",
+ *         type="integer",
+ *         description="rating",
+ *         example="3"
+ *     ),
+ *     @OA\Property(
+ *         property="comment",
+ *         type="string",
+ *         description="comment",
+ *         example="хороший отзыв"
+ *     ),
+ * )
      * @inheritdoc
      */
     public function rules(): array
